--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "bootstrap-4-react": "0.0.59",
     "devextreme": "19.1-stable",
-    "devextreme-react": "19.1-stable",
+    "devextreme-react": "^19.1.12",
     "devextreme-themebuilder": "19.1-stable",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux-custom-store": "^1.0.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "whatwg-fetch": "^3.0.0"
+    "react-scripts": "^4.0.1",
+    "whatwg-fetch": "^3.0.0",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
