--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "front-pub",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:3002",
+  "proxy": "http://localhost:3002",
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap-4-react": "0.0.59",
     "devextreme": "19.1-stable",
     "devextreme-react": "^19.1.12",
     "devextreme-themebuilder": "19.1-stable",
+    "jspdf": "^2.2.0",
+    "jspdf-autotable": "^3.5.13",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux-custom-store": "^1.0.0",
